# doom-clone

./: .gitignore  CMakeLists.txt  README.md
include/glad/: gl.h
src/: e1-1.c  main.c
src/exercises/: e1-2.c  e1-3.c
